feat: added a way to allow different path for status

--- a/configs/kuma-uptime/kuma-uptime-stats.config
+++ b/configs/kuma-uptime/kuma-uptime-stats.config
@@ -15,12 +15,21 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
     }
-    
+
+    location /app {
+        # proxy_pass http://uptime:3001/status;
+        add_header Content-Type text/html;
+        return 200 '
+            <style>body,html{margin:0;overflow:hidden;height:100%}</style>
+            <iframe src="/status/app" frameborder="0" style="width:100%;height:100vh;border:none">
+        ';
+    }
+
     location /status/app {
         proxy_pass http://localhost:3001;
     }
     
     location / {
-        return 301 /status/app;
+        return 301 /app;
     }
 }
